--- a/web/splash/style.css
+++ b/web/splash/style.css
@@ -5,7 +5,7 @@ html {
 body {
   margin: 0;
   min-height: 100%;
-  background-color: #6A0D0D;
+  background-color: #0D1853;
   background-size: 100% 100%;
 }
 
